fix(report-view): fixed the table header and added vertical scrollbars

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+*::-webkit-scrollbar {
+  width: 0.3em;
+}
+*::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0);
+}
+*::-webkit-scrollbar-thumb {
+  background-color: #d5dde5;
+  outline: 0.5px solid #e8edf2;
+}
